--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -22,7 +22,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Labh K</a>.
+    Coded by <a href="www.github.com/labhk">Labh K</a>.
   </div>
 </body>
 </html>
