--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <title>Frontend Mentor | Product preview card component</title>
+      <link rel="stylesheet" href="./style.css"/>
 
-  <div>
-    
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="www.github.com/labhk">Labh K</a>.
-  </div>
-</body>
+    </head>
+    <body>
+
+      <main>
+        <img src="./images/image-product-desktop.jpg" alt="deskimg">
+        <p>PERFUME</p>
+        <p>Gabrielle Essence Eau De Parfum</p>
+        <p>A floral, solar and voluptuous interpretation composed by olivier polge, Perfumer-Creator for the House of CHANEL</p>
+        <p>$149.99 &nbsp;&nbsp; <s>$169.99</s></p>
+        <button><img src="./images/icon-cart.svg" alt="cart"/> to Cart</button>
+
+        </main>
+
+      <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="www.github.com/labhk">Labh K</a>.
+      </div>
+    </body>
 </html>
